# Blood-Donate-Backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
bloodbackend/: db.sqlite3  package-lock.json  package.json  requirements.txt
bloodbackend/Profile/: models.py  serializers.py  tests.py  urls.py  views.py
bloodbackend/Profile/migrations/: 0001_initial.py  0002_alter_userprofile_avatar.py
bloodbackend/bloodbackend/: asgi.py  settings.py  urls.py  wsgi.py
bloodbackend/user_api/: admin.py  models.py  serializers.py  tests.py  urls.py  validations.py  views.py
bloodbackend/user_api/migrations/: 0001_initial.py  0002_patientblood.py  0003_appuser_is_staff.py
