[tool.poetry]
name = "blood-donate-backend"
version = "0.1.0"
description = ""
authors = ["NaifZaghmout zaghmout <naif-zaghmout@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
